Add samples